# group-maker

./: .gitignore  pyproject.toml  result_member.csv
src/: data.csv  data.xlsx  main.py
