[tool.poetry]
name = "group-maker"
version = "0.1.0"
description = ""
authors = ["matsu.jp <chemical.plek@gmial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pulp = "^2.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
